update meta description

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="CrytotimesTV"
+      content="CryptoTimes TV is the media subsidiary of the Vefi Ecosystem bringing you top notch, ear-tingling and eye-itching news from the crypto and Fintech industries."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
